--- a/swDemo.html
+++ b/swDemo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Energy Monitor">
-    <title>Energy Monitor</title>
+    <title>!!Energy Monitor!!</title>
     <!-- <script src="../js/responsive.js"></script> -->
     <link rel="stylesheet" href="styles.css">
     <script>
@@ -12,7 +12,7 @@
         console.log('hoi');
 
         window.addEventListener('load', function() {
-            navigator.serviceWorker.register('xxxxxxxxx).then(function(registration) {
+            navigator.serviceWorker.register('/sw.js').then(function(registration) {
             // Registration was successful
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
             }, function(err) {
