--- a/swDemo.html
+++ b/swDemo.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <h1 class="title">Gebäudename</h1>
+    <h1 class="title">Master</h1>
 
     <div class="graphContainer">
       <div class="graph">Diagramm</div>
